--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,6 +6,7 @@
 @import "./components/buttons";
 @import "./components/quick-features";
 @import "./components/logo-cloud";
+@import "./components/products";
 //utlis;
 @import "./utils/variables";
 //pages;
