--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,6 +7,7 @@
 @import "./components/quick-features";
 @import "./components/logo-cloud";
 @import "./components/products";
+@import "./components/top-categoris.scss";
 //utlis;
 @import "./utils/variables";
 //pages;
